testCases/semanticAnalyzerTestCases/correct/termC.cs16
/*
    Author: Chris Kaebe
    Date: March 4, 2016
*/

int main(void){
    int x;
    bool y;

    x := x * x;
    x := x mod x;
    x := x / x;

    x := x * x / x;
    x := x mod x * x;
    x := x / x * x / 2 * 3 / 5 * x;

    y := true and false && true ;
    y := true;
    y := true and false;
    y := true && true;
    return 1;
}